freedom-maker (0.9) UNRELEASED; urgency=medium

  * Remove dependency on extlinux. (Closes: #869203)
  * Add myself to list of uploaders.

 -- Sunil Mohan Adapa <sunil@medhas.org>  Tue, 25 Jul 2017 19:34:03 +0530

freedom-maker (0.8) unstable; urgency=low

  [ Joseph Nuthalapati ]
  * Initial release. (Closes: #864764)

 -- Federico Ceratto <federico@debian.org>  Sun, 18 Jun 2017 16:00:03 +0100