@@ -22,7 +22,7 @@ Depends:
  ${misc:Depends},
  ${python3:Depends},
  binfmt-support,
- btrfs-tools,
+ btrfs-progs,
  dosfstools,
  git,
  pxz,
