@@ -216,7 +216,7 @@ class ImageBuilder(object):  # pylint: disable=too-many-instance-attributes
             self.parameters += ['--boottype', self.boot_filesystem_type]
 
         if 'btrfs' in [self.root_filesystem_type, self.boot_filesystem_type]:
-            self.packages += ['btrfs-tools']
+            self.packages += ['btrfs-progs']
 
     def process_packages(self):
         """Add parameters for additional packages to install in image."""
